--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/italocsn05/cypress-automation-conduit-project#readme",
   "dependencies": {
-    "cypress": "^9.1.0"
+    "cypress": "^9.1.0",
+    "faker": "^5.5.3"
   }
 }
